retrieve all pipelines
