# artisan/doorman/docs/swagger.yaml
@@ -147,7 +147,7 @@ info:
     email: onix@gatblau.org
     name: gatblau
     url: http://onix.gatblau.org/
-  description: Transfer (pull, verify, scan, resign and push) artefacts between networks
+  description: Transfer (pull, verify, scan, resign and push) artefacts between repositories
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -237,6 +237,32 @@ paths:
       tags:
       - Keys
   /pipe:
+    get:
+      description: gets all pipelines
+      produces:
+      - application/json
+      - ' application/yaml'
+      - ' application/xml'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Gets all pipelines
+      tags:
+      - Pipelines
     put:
       description: creates or updates an inbound route
       parameters:
